// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen renders correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
      },
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    style={
      {
        "color": "black",
      }
    }
  >
    Login Screen
  </Text>
</View>
`;

exports[`TestScreen renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      {
        "fontSize": 18,
        "marginVertical": 10,
      }
    }
  >
    Test 1: Basic Rendering ✓
  </Text>
</View>
`;

exports[`renders a basic React component 1`] = `
<View>
  <Text>
    Hello World
  </Text>
</View>
`;
